syntax = "proto3";

option go_package = "serverproto";
option java_multiple_files = true;
option java_package = "serverproto.serverproto";
option java_outer_classname = "JavaTranscationServerProto";


package server;


// Go为服务端 事件服务器与客户端和链交互
service GoEventService{
    rpc GoClientRegistEvent(ClientRegisterAddressReq)returns (ClientRegisterAddressRes){}
    rpc GoClientRequestEvent(ClientTransactionReq)returns(ClientTransactionRes){}
    rpc GoChainRequestEvent(stream ChainTranscationReq)returns(stream ChainTranscationRes){}
    rpc GoChainRequestCountEvent(stream ChainTranscationAccountReq)returns(stream ChainTranscationAccountRes){}
    rpc GoJavaRequestEvent(stream ClientTransactionJavaRes)returns(stream ClientTransactionJavaReq){}
}


//客户端注册地址
message ClientRegisterAddressReq{
    string AddRessIpReq= 1; //ip
    string AddRessPortReq= 2; //端口
    string RemarkReq = 3; // 备注
}
//服务端注册地址返回值
message ClientRegisterAddressRes{
    string MessageRes = 1; // 成功信息
    bool IsSuccess = 2; //注册成功标志
    string MessageIDRes = 3; //成功
}

//客户端请求交易体
message ClientTransactionReq{
    string TxIdReq= 1;
    string AddressIdReq = 2;
    string ChainIdReq = 3;
}

//服务端请求交易返回值
message ClientTransactionRes{
    string TxIdRes = 1;
    string CodeRes = 2;
    string MessageRes = 3;
    string TimeRes = 4;
    string ChainIdRes = 5;
}

//链请求交易体
message ChainTranscationReq{
    string TxIdReq = 1;
    string TxIpReq =2;
    int32 TotalVotesReq = 3;
    string ChainIdReq = 4;
}

//服务端对链请求交易返回值
message ChainTranscationRes{
    string TxIdRes = 1;
    bool IsReceivedRes =2;
}

//链请求交易体
message ChainTranscationAccountReq{
    string TxIdReq = 1;
    bool IsSuccessReq =2;
    string CodeReq = 3;
    string MessageReq = 4;
    string NodeIdReq = 5;
}

//服务端对链请求交易返回值
message ChainTranscationAccountRes{
    string TxIdRes = 1;
    bool IsReceivedRes =2;
}

//服务端发送java请求参数
message ClientTransactionJavaReq{
    string TxIdRes = 1;
    string CodeRes = 2;
    string MessageRes = 3;
    string ChainIdRes = 4;
}


//go客户端收到java服务端返回值
message ClientTransactionJavaRes{
    string TxIdRes = 1;
    string IsReceivedRes = 2;
}

